--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "3.5"
-script:  make test 
+script:  
+  - make test 
+  - coverage run test_rpn.py
+  - coverage report 
 after_success:
   - coveralls
