--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "3.5"
+install:
+  - pip install python-coveralls
+  - pip install coverage
 script:  
   - make test 
   - coverage run test_rpn.py
