--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install python-coveralls
   - pip install coverage
+  - pip install click
 script:  
   - make test 
   - coverage run test_rpn.py
