--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - "3.5"
 install:
   - pip install python-coveralls
-  - pip install coverage
-  - pip install click
+  - pip3 install click
 script:  
   - make test 
   - coverage run test_rpn.py
